# git-kit

./: .gitignore  LICENSE  README.md  git-kit.py  pyproject.toml  setup.cfg  setup.py
gitkit/: __init__.py  __main__.py  branches.py  cli.py  commits.py  conf.py  fixup_readme.py  history.py  ownership.py  status.py  tags.py  util.py
gitkit/commands/: annotate_blame_ignores.py  archaeology.py  autofixup.py  branches.py  commit_sizes.py  commits.py  del_merged.py  go_back.py  history.py  httpify_remote.py  main_branch.py  message_stats.py  ownership.py  point_here.py  reltag.py  tags.py  vtag.py  what.py
gitkit/util/: cli.py  refs.py  shell.py  status.py
